cmake_minimum_required(VERSION 3.0.0)
ADD_DEFINITIONS(-DUNICODE)
project(DirectX VERSION 0.1.0)
add_executable(${PROJECT_NAME} WIN32 WinMain.cpp App/App.cpp Window/Window.cpp Core/Graphics.cpp 
	Core/CommandQueue.cpp Core/SwapChain.cpp Models/Model.cpp Models/Mesh.cpp Utility/Utility.cpp App/Bunny.cpp)
if(MSVC)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
else(MSVC)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
endif(MSVC)
find_package(directx-headers CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE Microsoft::DirectX-Guids Microsoft::DirectX-Headers)
find_package(tinyobjloader CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE tinyobjloader::tinyobjloader)
find_package(assimp CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE assimp::assimp)